deployment/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: askseaman-depl-api
  labels:
    env: development
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      project: askseaman-proj-api
  template:
    metadata:
      labels:
        project: askseaman-proj-api
    spec:
      containers:
        - name: askseaman-api
          image: zzzloy777/askseaman-api:latest
          ports:
            - containerPort: 4000
              name: askseaman-api
---
apiVersion: v1
kind: Service
metadata:
  name: askseaman-serv-api
  labels:
    env: development
spec:
  selector:
    project: askseaman-proj-api
  type: NodePort
  ports:
    - name: api4000
      port: 4000
      targetPort: 4000
