deployment/neo4j-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: askseaman-depl-neo4j
  labels:
    env: development
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      project: askseaman-proj-neo4j
  template:
    metadata:
      labels:
        project: askseaman-proj-neo4j
    spec:
      containers:
        - name: askseaman-neo4j
          image: neo4j:4.2.2-enterprise
          volumeMounts:
            - mountPath: "/var/lib/neo4j/data"
              subPath: "askseaman.com/neo4j/data"
              name: sc-volume
            - mountPath: "/var/lib/neo4j/import"
              subPath: "askseaman.com/neo4j/import"
              name: sc-volume
            - mountPath: "/var/lib/neo4j/plugins"
              subPath: "askseaman.com/neo4j/plugins"
              name: sc-volume
          ports:
            - containerPort: 7474
            - containerPort: 7473
            - containerPort: 7687
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: topology.kubernetes.io/zone
                    operator: In
                    values:
                      - us-east4-a
                      - us-east4-b
      volumes:
        - name: sc-volume
          persistentVolumeClaim:
            claimName: sc-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: askseaman-serv-neo4j
  labels:
    env: development
spec:
  selector:
    project: askseaman-proj-neo4j
  type: NodePort
  ports:
    - name: neo4j7474
      port: 7474
      targetPort: 7474
    - name: neo4j7473
      port: 7473
      targetPort: 7473
    - name: neo4j7687
      port: 7687
      targetPort: 7687
